testsuite/escript/condexpr/condexpr03.err
condexpr03.src:1:11: error: Unknown identifier 'TRUE'.
