testsuite/escript/condexpr/condexpr03.src
print( 1 ? TRUE : 0 );
